--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=blog
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:2iD2NbAvC9DUJDXI2wjElBXBVee/PX8Hcq/+Cvmk/KU=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://ddave.me
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=laravel_db
+DB_USERNAME=root
+DB_PASSWORD=CntmZ8hFeWkwBWdS5ksGDmNTbVCvxDxgfw22y8Rt
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
